--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  shared_preferences: ^0.5.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-
+  provider: ^2.0.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
