--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
   shared_preferences: ^0.5.6
+
+  #https://pub.dev/packages/flutter_email_sender#-example-tab-
+  flutter_email_sender: ^3.0.1
+
+  url_launcher: ^5.4.9
+
+  #https://pub.dev/packages/carousel_slider#-installing-tab-
+  carousel_slider: ^2.2.1
+  
+  #https://pub.dev/packages/flutter_phone_state#-installing-tab-
+  flutter_phone_state: ^0.5.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
