--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   #https://pub.dev/packages/flutter_phone_state#-installing-tab-
   flutter_phone_state: ^0.5.9
 
+  # Crear una base de datos local
+  # https://pub.dev/packages/sqflite
+  sqflite: ^1.3.0
+  path: ^1.6.4
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
