--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   sqflite: ^1.3.0
   path: ^1.6.4
 
+  # Lo necesario para conectarnos a firebase y login con cuenta de  Google
+  # https://medium.com/flutter-community/flutter-implementing-google-sign-in-71888bca24ed
+  firebase_auth: ^0.16.1
+  google_sign_in: ^4.5.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
