--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   # Lo necesario para conectarnos a firebase y login con cuenta de  Google
   # https://medium.com/flutter-community/flutter-implementing-google-sign-in-71888bca24ed
   firebase_auth: ^0.16.1
+  firebase_core: ^0.4.5
+  firebase_core_web: ^0.1.1+2
   google_sign_in: ^4.5.1
 
   # The following adds the Cupertino Icons font to your application.
