--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,9 @@ dependencies:
   firebase_auth: ^0.16.1
   firebase_core: ^0.4.5
   firebase_core_web: ^0.1.1+2
-  google_sign_in: ^4.5.1
-
+  google_sign_in: ^4.5.1  
+  firebase_admob: ^0.9.3+2 
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
