--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,6 +61,8 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // PUBLICIDAD
+    //implementation 'com.google.android.gms:play-services-ads:19.1.0'
 }
 
 apply plugin: 'com.android.application'
