Deberia de funcionar, revisar #18

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,13 +23,14 @@
                  
                  Añadida la publicidad
                  
-                 android:name="com.google.android.gms.ads.APPLICATION_ID"
-              android:value="ca-app-pub-7462396340145780~9379634838"
+                android:name="com.google.android.gms.ads.APPLICATION_ID"
+                android:value="ca-app-pub-7462396340145780~9379634838"
               -->
             <meta-data
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
+            
             <!-- Displays an Android View that continues showing the launch screen
                  Drawable until Flutter paints its first frame, then this splash
                  screen fades out. A splash screen is useful to avoid any visual
@@ -49,5 +50,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+              android:name="com.google.android.gms.ads.APPLICATION_ID"
+              android:value="ca-app-pub-7462396340145780~9379634838"
+              />
     </application>
 </manifest>
