--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
   firebase_core_web: ^0.1.1+2
   google_sign_in: ^4.5.1  
   firebase_admob: ^0.9.3+2 
-  
+  admob_flutter: "^0.3.4"
+  arcore_flutter_plugin: ^0.0.5+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
