--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,12 +54,15 @@ dependencies:
   # Control de la base de datos
   cloud_firestore: ^0.13.7
 
+  # Para reproudcir sonidos en la aplicación
+  audioplayers: ^0.15.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   provider: ^2.0.1
   
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -78,6 +81,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/img/
+    - assets/audio/
     - data/menu_opts.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
