Subida a play store, nueva clave, configuraciones, bundle , a espera de revisión por parte de Google #32

--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=&%ProCur4dor8Izq
 keyPassword=&%ProCur4dor8Izq
-keyAlias=flutterKeyRelease
-storeFile=flutterKeyRelease.jks
+keyAlias=keysnake
+storeFile=keysnake.jks
