--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,10 @@ dependencies:
   # Para reproudcir sonidos en la aplicación
   audioplayers: ^0.15.1
 
+  # Para compartir a través de las redes sociales
+  # https://pub.dev/packages/flutter_share_me#-installing-tab-
+  flutter_share_me: ^0.9.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
