--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,10 @@ dependencies:
   # https://pub.dev/packages/flutter_share_me#-installing-tab-
   flutter_share_me: ^0.9.1
 
+  # Bocadillos para los mensajes
+  # https://pub.dev/packages/bubble#-installing-tab-
+  bubble: ^1.1.9+1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
