--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -103,6 +103,7 @@ apply plugin: 'com.google.gms.google-services'
 dependencies {
   // add the Firebase SDK for Google Analytics
   implementation 'com.google.firebase:firebase-analytics:17.2.2'
+  implementation 'com.google.android.gms:play-services-ads:19.2.0'
   // add SDKs for any other desired Firebase products
   // https://firebase.google.com/docs/android/setup#available-libraries
 }
